@@ -12,6 +12,8 @@ What's New in Python 3.2 Alpha 1?
 Core and Builtins
 -----------------
 
+- PyUnicode_DecodeFSDefaultAndSize() uses surrogateescape error handler
+
 - Issue #8419: Prevent the dict constructor from accepting non-string keyword
   arguments.
 
